# mnml-aws-eventbridge

./: Cargo.toml  README.md
src/: app.rs  config.rs  eventbridge.rs  keys.rs  main.rs  ui.rs
