[package]
name = "mnml-aws-eventbridge"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "AWS EventBridge buses + rules browser for mnml — terminal TUI listing event buses or rules-per-bus, with event-pattern + targets detail panel, console open, ARN yank. Runs standalone or as an mnml-hosted pane. Shells out to the `aws` CLI; no SDK dep."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-aws-eventbridge"
readme = "README.md"

[[bin]]
name = "mnml-aws-eventbridge"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
